# lmnop-wakeup

./: .copier-answers.yml  .env.sample  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.clinerules/: briefing-announcer-implementation-summary.md  logging-style.md  music-assistant-client.md  running-python.md
.github/workflows/: ci.yaml  docker.app.yaml  docker.base.yaml
design/: theme_intro.aup3  theme_intro.aup3-shm  theme_intro.aup3-wal
docker/: Dockerfile.base
notebooks/: production_flow.ipynb  weather.ipynb
scratch/: gcal.py
scratch/examples/: briefing_directory_usage.py  enumerate_speakers.py  simple_speaker_list.py
scripts/: fmt.sh  truncate.sql
src/llmop_wakeup/: __init__.py  app.py  calendars.py  logging.py  weather.py
src/lmnop_wakeup/: __init__.py  app.py  arg.py  asyncio.py  calendars.py  cli.py  common.py  entity.py  env.py  llm.py  locations.py  logging.py  paths.py  scheduler.py  server.py  state.py  tracing.py  tts.py  typing.py  weather.py  workflow.py
src/lmnop_wakeup/audio/: announcer.py  config.py  file_manager.py  id3_tags.py  master.py  production.py  session.py  speech_config.py  theme.py  workflow.py
src/lmnop_wakeup/brief/: actors.py  climatologist.py  content_optimizer.py  meteorologist.py  model.py  run.py  run_graph.py  script_writer_agent.py  sectioner_agent.py  service.py  showrunner.py  trip_weather_planner.py  weather.json  workflow.py
src/lmnop_wakeup/cli/: __init__.py  audio.py  briefing.py  debug.py  main.py  prompts.py  shared.py  tasks.py
src/lmnop_wakeup/core/: cache.py  cost_tracking.py  date.py  logging.py  paths.py  relative_dates.py  terminal.py  tracing.py  typing.py
src/lmnop_wakeup/events/: blogto_api.py  event_summarizer_agent.py  events_api.py  model.py  prioritizer.py  prioritizer_agent.py  scheduler_agent.py
src/lmnop_wakeup/events/calendar/: gcalendar_api.py  hass_calendar_api.py
src/lmnop_wakeup/location/: geocode_api.py  model.py  resolver_agent.py  routes_api.py
src/lmnop_wakeup/schedule/: model.py  run.py  scheduler.py  timekeeper.py
src/lmnop_wakeup/scratch/: gcal.py
src/lmnop_wakeup/services/: briefing_service.py
src/lmnop_wakeup/showrunner/: showrunner_agent.py
src/lmnop_wakeup/tasks/: __init__.py  gtasks_api.py  model.py  tasks_api.py
src/lmnop_wakeup/tools/: __init__.py  calendar_api.py  calendar_merger.py  calendars.py  gcalendar_api.py  google_auth.py  hass_api.py  routes_api.py  run_python.py  weather.py  weather_api.py
src/lmnop_wakeup/tools/calendar/: gcalendar_api.py  hass_calendar_api.py  model.py
src/lmnop_wakeup/utils/: date.py  logging.py
src/lmnop_wakeup/weather/: meteorologist.py  meteorologist_agent.py  model.py  sunset_oracle.py  sunset_oracle_agent.py  sunset_scoring.py  weather_api.py
src/pirate_weather_api_client/: README.md  __init__.py  client.py  errors.py  types.py
src/pirate_weather_api_client/api/weather/: weather.py
src/pirate_weather_api_client/models/: __init__.py  alerts_item.py  currently.py  daily.py  daily_data_item.py  flags.py  flags_source_idx.py  flags_source_idx_etopo.py  flags_source_idx_gfs.py  flags_source_idx_hrrr.py  flags_source_idx_nbm.py  flags_source_times.py  hourly.py  hourly_data_item.py  minutely.py  minutely_data_item.py  weather_lang.py  weather_response_200.py  weather_response_400.py  weather_response_404.py  weather_response_500.py  weather_response_502.py
tests/: test_briefing_directory.py  test_calendar_model.py  test_consolidate_dialogue.py  test_golden_hour.py  test_id3_tags.py  test_langfuse_agent.py  test_weather_api.py
tests/schedule/: test_timekeeper.py
tests/tools/: test_calendar_merger.py
