[project]
name = "lmnop_wakeup"
version = "0.0.0"
description = "Rise and Shine!"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "aiosqlite>=0.21.0",
    "attrs>=22.2.0",
    "audioop-lts>=0.2.1",
    "clypi>=1.2.22",
    "email-validator>=2.2.0",
    "geopy[aiohttp]>=2.4.1",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.16.1",
    "google-maps-routing>=0.6.15",
    "haversine>=2.9.0",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langfuse>=2.60.4",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph>=0.4.5",
    "lazy-object-proxy>=1.11.0",
    "llm-sandbox[docker]>=0.3.4",
    "logfire[psycopg]>=3.15.1",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "openapi-python-client>=0.24.3",
    "opentelemetry-instrumentation-httpx>=0.54b0",
    "opentelemetry-instrumentation-sqlite3>=0.54b1",
    "platformdirs>=4.3.8",
    "pydantic-ai[logfire]>=0.2.7",
    "pydantic-ai>=0.2.12",
    "pydantic-extra-types>=2.10.4",
    "pydantic>=2.11.4",
    "pydub>=0.25.1",
    "python-dateutil>=2.8.0",
    "random-word-generator>=1.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "rottentomatoes-python>=1.2.0",
    "typer>=0.15.4",
    "asynciolimiter>=1.2.0",
    "fastapi>=0.115.12",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/shyndman/lmnop_wakeup"
"Bug Tracker" = "https://github.com/shyndman/lmnop_wakeup/issues"

[project.scripts]
wakeup = "lmnop_wakeup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "jupyterlab>=4.4.2",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pyright]
include = ["src", "tests"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
deprecateTypingAliases = true
reportMissingImports = "warning"
reportUnusedImport = "error"
reportDeprecated = "error"
reportImplicitOverride = "error"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lmnop_wakeup"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.uv.sources]
rich = {git = "ssh://git@github.com/shyndman/rich"}
